Closed Bug 1377314 Opened 7 years ago Closed 7 years ago

Crash in mozalloc_abort | abort | webrender::render_backend::{{impl}}::run

Categories

(Core :: Graphics: WebRender, defect)

56 Branch
Unspecified
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- fixed

People

(Reporter: marcia, Assigned: sotaro)

References

Details

(Keywords: crash, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-05caeca6-0b64-4311-a0e6-cabaf0170629.
=============================================================

Using today's nightly I am getting this crash when resizing my browser window.

Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:56.0) Gecko/20100101 Firefox/56.0 ID:20170629100331 CSet: 9af23c413a1f8d337b19b4f8450e241e91b71136

STR:

1. With Webrender enabled, after crashing I come to the session restore window.
2. Resize the browser window.
3. Crash 100%
Whiteboard: [gfx-noted]
Assignee: nobody → sotaro.ikeda.g
The crash seemed to be caused by incorrect update_image() usage. And SendUpdateImage() is only used in nsChildView::AddWindowOverlayWebRenderCommands(). Then it seems to cause the problem.
nsChildView::AddWindowOverlayWebRenderCommands() was added by bug 1368846.
Blocks: 1368846
Attachment #8882976 - Flags: review?(bugmail)
Attachment #8882976 - Flags: review?(bugmail) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/aba2f559df0f
Replace ImageKey when image size is changed r=kats
https://hg.mozilla.org/mozilla-central/rev/aba2f559df0f
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: