Bug 1377314 - Replace ImageKey when image size is changed r=kats